erDiagram
    utilisateurs {
        INT id PK
        VARCHAR nom "NOT NULL"
        VARCHAR prenom
        VARCHAR email "UNIQUE NOT NULL"
        VARCHAR mot_de_passe "bcrypt hash"
        ENUM role "user admin"
        VARCHAR telephone
        DATE date_naissance
        BOOLEAN actif
        DATETIME created_at
    }
    reservations {
        INT id PK
        VARCHAR reference "UNIQUE - VV-XXXXXXX"
        INT utilisateur_id FK
        INT destination_id FK
        INT hebergement_id FK
        INT transport_id FK
        DATE date_depart
        DATE date_retour
        INT nb_voyageurs
        DECIMAL montant_total
        ENUM statut "en_attente confirmee annulee terminee"
        DATETIME date_reservation
    }
    reservation_activites {
        INT id PK
        INT reservation_id FK
        INT activite_id FK
        INT nb_places
    }
    activites {
        INT id PK
        VARCHAR nom_fr
        DECIMAL prix
        INT places_restantes
    }
    paiements {
        INT id PK
        INT reservation_id FK
        ENUM mode "carte paypal virement crypto"
        DECIMAL montant
        ENUM statut "en_attente valide refuse rembourse"
        DATETIME date_paiement
        VARCHAR reference_externe
    }
    itineraires {
        INT id PK
        INT utilisateur_id FK
        VARCHAR nom
        INT destination_id FK
        DATE date_debut
        DATE date_fin
        INT nb_voyageurs
        ENUM statut "brouillon confirme annule"
        DECIMAL cout_total
        DATETIME date_creation
    }
    itineraire_items {
        INT id PK
        INT itineraire_id FK
        ENUM type_element "transport hebergement activite autre"
        INT element_ref_id
        INT quantite
        DECIMAL prix_unitaire
        DATETIME date_debut
        DATETIME date_fin
        INT ordre
    }

    utilisateurs ||--o{ reservations : "utilisateur_id FK"
    reservations ||--|| paiements : "reservation_id FK"
    reservations ||--o{ reservation_activites : "reservation_id FK"
    activites ||--o{ reservation_activites : "activite_id FK"
    utilisateurs ||--o{ itineraires : "utilisateur_id FK"
    itineraires ||--o{ itineraire_items : "itineraire_id FK"
